tests/ui/imports/issue-109343.stderr
error: cannot determine resolution for the import
  --> $DIR/issue-109343.rs:8:9
   |
LL | pub use f as g;
   |         ^^^^^^

error: cannot determine resolution for the import
  --> $DIR/issue-109343.rs:8:9
   |
LL | pub use f as g;
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0432]: unresolved import `unresolved`
  --> $DIR/issue-109343.rs:4:9
   |
LL | pub use unresolved::f;
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `unresolved`
   |
help: you might be missing a crate named `unresolved`, add it to your project and import it in your code
   |
LL + extern crate unresolved;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
